2009-02-02  Alberto Garcia  <agarcia@igalia.com>

	Based on a patch by Iván Gómez (igomez@igalia.com)

	* src/hildon-banner.c
	* src/hildon-gtk.c
	* src/hildon-main.c
	* src/hildon-note.c
	* src/hildon-pannable-area.c
	* src/hildon-picker-dialog.c
	* src/hildon-wizard-dialog.h
	* src/hildon-wizard-dialog.c: Documentation updates.

	* src/hildon-picker-dialog.c (hildon_picker_dialog_init): Use
	gtk_dialog_add_button() instead of hildon_dialog_add_button().

2009-02-02  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump.
	* debian/changelog: version bump.

2009-02-02  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.40]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-01-29  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-edit-toolbar.c (hildon_edit_toolbar_init): Don't use
	a stock icon nor change the relief of the back arrow.

	Fixes: NB#94970 (Hildon Edit Mode Toolbar should use back button
	graphics from theme)

2009-01-29  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_set_alignment): Use
	priv->alignment if the button has no child yet.

2009-01-29  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-button.c: (hildon_button_init): Set the
	button style during initialization to give it the proper
	label color.

	Fixes: NB#99713 (HildonButton value label color is wrong)

2009-01-28  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c: Document
	hildon_touch_selector_center_on_selected()

2009-01-28  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (+hildon_app_menu_show_all)
	(+hildon_app_menu_hide_all, hildon_app_menu_class_init): Show/hide
	all menu items, but not the menu itself.
	(hildon_app_menu_repack_filters, hildon_app_menu_repack_items)
	(hildon_app_menu_insert, hildon_app_menu_add_filter): Realize menu
	items after adding them to the menu so keyboard accelerators work.